hard-gists/7301722/run.log
=== Docker Run Log for 7301722 ===
Started at: Mi 29. Okt 17:05:03 CET 2025

[2025-10-29 17:05:04] START: Running container for 7301722
[2025-10-29 17:05:04] SUCCESS: Container efc91e7bc5e5e00af4335cb0463f34420a8bf97034f2d445d0166c7df5ddc962 started for 7301722
=== Container logs for 7301722 ===
  File "/snippet.py", line 54
    print "Inserting the hoff into image of size: ", str(oldImg.size)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7301722 ===
[2025-10-29 17:05:06] INFO: Container efc91e7bc5e5e00af4335cb0463f34420a8bf97034f2d445d0166c7df5ddc962 has stopped
